[gd_scene load_steps=4 format=3 uid="uid://dlfgu138q4bat"]

[ext_resource type="Script" path="res://addons/silent_wolf/Auth/ResetPassword.gd" id="1"]
[ext_resource type="Theme" uid="uid://d2eakbmaefnt6" path="res://addons/silent_wolf/assets/themes/sw_theme.tres" id="1_qg4ch"]
[ext_resource type="PackedScene" uid="uid://clllbf6am8qdf" path="res://addons/silent_wolf/common/SWButton.tscn" id="2"]

[node name="ResetPassword" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qg4ch")
script = ExtResource("1")

[node name="BackButton" parent="." instance=ExtResource("2")]
layout_mode = 0
offset_left = 137.0
offset_top = 95.0
offset_right = 282.0
offset_bottom = 144.0
text = "‚Üê Back"

[node name="RequestFormContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 650.0
offset_top = 212.0
offset_right = 1346.0
offset_bottom = 812.0
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="RequestFormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Reset password"
horizontal_alignment = 1

[node name="LabelExplainer" type="Label" parent="RequestFormContainer"]
layout_mode = 2
text = "Please enter your player name below."

[node name="FormContainer" type="HBoxContainer" parent="RequestFormContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="FormLabels" type="VBoxContainer" parent="RequestFormContainer/FormContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="RequestFormContainer/FormContainer/FormLabels"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Player name"
vertical_alignment = 1

[node name="FormInputFields" type="VBoxContainer" parent="RequestFormContainer/FormContainer"]
layout_mode = 2

[node name="PlayerName" type="LineEdit" parent="RequestFormContainer/FormContainer/FormInputFields"]
custom_minimum_size = Vector2(440, 80)
layout_mode = 2
max_length = 50

[node name="ErrorMessage" type="Label" parent="RequestFormContainer"]
visible = false
modulate = Color(0.92549, 0, 0, 1)
layout_mode = 2

[node name="PlayerNameSubmitButton" parent="RequestFormContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "Submit"

[node name="ProcessingLabel" type="Label" parent="RequestFormContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Processing..."
horizontal_alignment = 1

[node name="PwdResetFormContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 208.0
offset_right = 1769.0
offset_bottom = 870.0
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="PwdResetFormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Reset password"
horizontal_alignment = 1

[node name="LabelExplainer" type="Label" parent="PwdResetFormContainer"]
layout_mode = 2
text = "Please enter below the code we sent you by email and your new password twice."

[node name="FormContainer" type="HBoxContainer" parent="PwdResetFormContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="FormLabels" type="VBoxContainer" parent="PwdResetFormContainer/FormContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 18

[node name="CodeLabel" type="Label" parent="PwdResetFormContainer/FormContainer/FormLabels"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Code"
vertical_alignment = 1

[node name="PasswordLabel" type="Label" parent="PwdResetFormContainer/FormContainer/FormLabels"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Password"
vertical_alignment = 1

[node name="ConfirmPasswordLabel" type="Label" parent="PwdResetFormContainer/FormContainer/FormLabels"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Confirm password"
vertical_alignment = 1

[node name="FormInputFields" type="VBoxContainer" parent="PwdResetFormContainer/FormContainer"]
custom_minimum_size = Vector2(440, 80)
layout_mode = 2
theme_override_constants/separation = 18

[node name="Code" type="LineEdit" parent="PwdResetFormContainer/FormContainer/FormInputFields"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_length = 50

[node name="Password" type="LineEdit" parent="PwdResetFormContainer/FormContainer/FormInputFields"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_length = 30
secret = true

[node name="ConfirmPassword" type="LineEdit" parent="PwdResetFormContainer/FormContainer/FormInputFields"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_length = 30
secret = true

[node name="ErrorMessage" type="Label" parent="PwdResetFormContainer"]
visible = false
modulate = Color(0.92549, 0, 0, 1)
layout_mode = 2
autowrap_mode = 1

[node name="NewPasswordSubmitButton" parent="PwdResetFormContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "Submit"

[node name="ProcessingLabel" type="Label" parent="PwdResetFormContainer"]
visible = false
layout_mode = 2
text = "Processing..."
horizontal_alignment = 1

[node name="PasswordChangedContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 525.0
offset_top = 269.0
offset_right = 1469.0
offset_bottom = 793.0
theme_override_constants/separation = 60

[node name="PwdChanedLabel" type="Label" parent="PasswordChangedContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 72
text = "Password reset"

[node name="PasswordChangedLabelExplainer" type="Label" parent="PasswordChangedContainer"]
layout_mode = 2
text = "Your password was changed successfully."
horizontal_alignment = 1

[node name="CloseButton" parent="PasswordChangedContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="RequestFormContainer/PlayerNameSubmitButton" to="." method="_on_PlayerNameSubmitButton_pressed"]
[connection signal="pressed" from="PwdResetFormContainer/NewPasswordSubmitButton" to="." method="_on_NewPasswordSubmitButton_pressed"]
[connection signal="pressed" from="PasswordChangedContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
